[package]
name = "RustyTwisted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
rand = "0.8"
notify = "6.0.0"  
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
chrono = "0.4.38"

[profile.profiling]
inherits = "release"
debug = true
